set(ASSIGNMENT_SOURCE1 structure_class.cpp)
add_executable(assign1 ${ASSIGNMENT_SOURCE1})

set(ASSIGNMENT_SOURCE2 structure_class_inheritance.cpp)
add_executable(assign2 ${ASSIGNMENT_SOURCE2})

 
set(ASSIGNMENT_SOURCE3 copy_contructor.cpp)
add_executable(assign3 ${ASSIGNMENT_SOURCE3})


set(ASSIGNMENT_SOURCE4 operator_overloading.cpp)
add_executable(assign4 ${ASSIGNMENT_SOURCE4})


set(ASSIGNMENT_SOURCE5 para_constructor.cpp)
add_executable(assign5 ${ASSIGNMENT_SOURCE5})


set(ASSIGNMENT_SOURCE6 singleton.cpp)
add_executable(assign6 ${ASSIGNMENT_SOURCE6})


set(ASSIGNMENT_SOURCE7 multilevel.cpp)
add_executable(assign7 ${ASSIGNMENT_SOURCE7})

set(ASSIGNMENT_SOURCE8 multiple.cpp)
add_executable(assign8 ${ASSIGNMENT_SOURCE8})

set(ASSIGNMENT_SOURCE9 ostream.cpp)
add_executable(assign9 ${ASSIGNMENT_SOURCE9})

set(ASSIGNMENT_SOURCE10 virtual.cpp)
add_executable(assign10 ${ASSIGNMENT_SOURCE10})

set(ASSIGNMENT_SOURCE11 templazied_class.cpp)
add_executable(assign11 ${ASSIGNMENT_SOURCE11})

set(ASSIGNMENT_SOURCE12 template_fun.cpp)
add_executable(assign12 ${ASSIGNMENT_SOURCE12})

set(ASSIGNMENT_SOURCE13 linked_list_struct_class.cpp)
add_executable(assign13 ${ASSIGNMENT_SOURCE13})

set(ASSIGNMENT_SOURCE14 stack.cpp)
add_executable(assign14 ${ASSIGNMENT_SOURCE14})

set(ASSIGNMENT_SOURCE15 queue.cpp)
add_executable(assign15 ${ASSIGNMENT_SOURCE15})

set(ASSIGNMENT_SOURCE16 delete_from_possition.cpp)
add_executable(assign16 ${ASSIGNMENT_SOURCE16})
